--- a/src/components/common/calendar/calendar.css
+++ b/src/components/common/calendar/calendar.css
@@ -28,10 +28,10 @@
     width: 100%;
     flex-basis: 100%;
     height: 56px;
-    max-width: unset;
+    max-width: 100%;
   }
   .calendar__input {
-    max-width: unset;
+    max-width: 100%;
     width: 100%;
   }
 }
